@@ -241,6 +241,7 @@ local function initPanel ()
   end)
   anchor = createCheckButton('reagents', anchor, -20, -5, L['always show reagents'])
   anchor = createCheckButton('questItems', anchor, 0, -5, L['always show quest items'])
+  anchor = createCheckButton('recipes', anchor, 0, -5, L['always show recipes'])
 
   anchor = createCheckButton('showTotal', anchor, 0, -5, L['show total count for stackable items'])
   anchor = createCheckButton('showBags', anchor, 0, -5, L['show bag count for stackable items'])
@@ -411,6 +412,7 @@ addon:on('ADDON_LOADED', function (name)
   checkOption('focus', false)
   checkOption('reagents', true)
   checkOption('questItems', false)
+  checkOption('recipes', false)
   checkOption('currency', true)
   checkOption('ignoreHonor', true)
   checkOption('money', false)
